--- a/src/styles/user-form.css
+++ b/src/styles/user-form.css
@@ -1,3 +1,23 @@
 body{
     background-color: #FCFAEF; 
 }
+.image{
+    width: 50vw;
+    margin-top: 1px;
+}
+section{
+   display: flex; 
+}
+.text1{
+    text-align: center;
+}
+.right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 50px;
+    /* margin-left: 140px;
+    margin-right: 40px;
+    margin-top: 40px; */
+    
+}
