--- a/src/styles/user-form.css
+++ b/src/styles/user-form.css
@@ -31,7 +31,15 @@ section{
 } */
 form{
     width: 80%;
-    margin-top: 10px;
+    margin-top: 25px;
+    font-size: 14px;
+}
+input{
+    height: 34px;
+    background-color:  #FCFAEF;
+    border: 2px solid #D9D9D9;
+    margin-top: 3px;
+    margin-bottom: 15px;
 }
 
 .input-group{
@@ -53,4 +61,37 @@ form{
 .input-group input{
     width: 100%;
 
+}
+
+button{
+    width: 116px;
+    height: 39px;
+    border-radius: 15px;
+    font-size: 16px;
+}
+.button-flex{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+
+.butype-1{
+    border: 1px solid #073142;
+    color: #073142;
+    background-color: #FCFAEF;
+    font-weight: bold;
+    
+}
+.butype-2{
+    color: #FCFAEF;
+    background-color: #D88A77;
+    border: none;
+}
+.select-1{
+    height: 36px;
+    background-color:  #FCFAEF;
+    border: 2px solid #D9D9D9;
+    margin-top: 3px;
+    margin-bottom: 15px;
+    width: 102%;
 }
