--- a/src/styles/pay-form.css
+++ b/src/styles/pay-form.css
@@ -1,107 +1,155 @@
 main {
     display: flex;
     height: 100%;
-    margin: 0, 0;
+    margin: 0;
+    padding: 0;
 }
 
-.img img {
+.subscription-pay-page {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background: #FCFAEF;
+}
+
+.img {
     width: 50vw;
     height: 100%;
+    background-image: url(../assets/images/payForm.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
-.first-box {
-    display: grid;
-    place-items: center;
+.first-box .second-box .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;  
+} 
+
+.form-title {
+    display: flex;
+    width: 557px;
+    height: 185.941px;
+    flex-direction: column;
     justify-content: center;
-    align-content: center;
-    padding: 2rem;
-    margin-left: 2rem;
+    flex-shrink: 0;
+    align-items: center;
 }
 
-.first-box h1 {
-    font-weight: 200;
-    text-align: center;
-    text-transform: uppercase;
+.form-title h1 {
     color: #073142;
+    text-align: center;
+    font-feature-settings: 'subs'on;
+    font-family: Bellota Text;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    text-transform: uppercase;
 }
 
-.second-box {
-    display: grid;
-    place-items: center;
+.first-form,
+.card form {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 2.5rem;
+    justify-items: center;
 }
 
 .first-form {
-    width: 37vw;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
     box-shadow: 0px 2px #073142;
 }
 
-.first-form label {
-    font-size: 1.1rem;
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
+.first-form label,
+.card label {
+    color: var(--DarkBlue, #073142);
+    font-family: Bellota Text;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    /* 228.571% */
 }
 
 legend {
     color: #3E8A9B;
+    font-family: Bellota Text;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    width: 457px;
+    line-height: 34px;
+    /* 228.571% */
     text-align: justify;
-    padding: 0.5rem;
-    font-size: 1.1rem;
 }
 
-.card label {
-    font-size: 1.1rem;
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
-    padding: 0.3;
+.card-input-more .input-stardard {
+    width: 162px;
+    height: 34px;
+    flex-shrink: 0;
 }
 
 .input-stardard {
-    width: 90%;
-    padding: 0.3rem;
+    width: 457px;
+    height: 34px;
+    flex-shrink: 0;
+    border: 2px solid var(--BaseGray, #D9D9D9);
+    background: var(--BaseWhite, #FCFAEF);
 }
 
-
-.card {
-    display: grid;
-    place-items: center;
-}
-
-.card form {
-    width: 37vw;
+.form-name,
+.form-email,
+.form-tel,
+.form-forma,
+.form-data,
+.card-input {
     display: flex;
+    width: 457px;
+    height: 66px;
     flex-direction: column;
-    padding: 1rem;
-    padding-top: 0;
-    border-radius: 0.25rem;
+    justify-content: center;
+    align-items: flex-start;
+    flex-shrink: 0;
 }
 
-.card .card-input {
+.card-input-more,
+.button  {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.card .card-input-more {
-    display: flex;
-    width: 20.5rem;
+    justify-content: space-between;
+    width: 457px;
     gap: 0 0.5rem;
 }
-
-.button {
+.button{
+    padding: 1rem 3.5rem;
+}
+.card-input-more .box-one,
+.box-two {
     display: flex;
-    gap: 0 0.5rem;
-    width: 20.5rem;
+    flex-direction: column;
+}
+
+.button .cancel {
+    color: var(--DarkBlue, #073142);
+    background: var(--BaseWhite, #FCFAEF);
+}
+
+.button .form-btn {
+    background: var(--PaleRed, #D88A77);
+    color: var(--BaseWhite, #FCFAEF);
 }
 
 .button button {
-    background: #D88A77;
-    color: white;
-    font-size: 1.2rem;
-    border: none;
-    border-radius: 0.5rem;
-    margin: 0 auto;
-    padding: 0.5rem;
+    width: 116px;
+    height: 39px;
+    flex-shrink: 0;
+    border-radius: 15px;
+    text-align: center;
+    font-family: Bellota Text;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px;
+    /* 200% */
 }
+
