--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -1,10 +1,30 @@
-.display-main{
-    display: flex;
-    justify-content: space-around;
-    border: 5px solid #FCFAEF;
-    border-radius: 20px;
+body{
+    background-color: #D88A77;
+
 }
 
+.first-display{
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    background-color: #FFFFFF;
+    width: 70vw;
+    border-radius: 30px;
+}
+.image-perfil{
+    width: 141px;
+    border-radius: 40px;
+    height: 155px;
+    margin-bottom: 10px;
+}
+
+.name-perfil{
+    font-family: 'Bebas Neue', sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 35px;
+    color: #073142;
+}
 .different-font{
     font-family: 'Bebas Neue', sans-serif;
 }
@@ -12,37 +32,46 @@
 .options-flex{
     display: flex;
     align-items: center;
+    justify-content: space-around;
+}
+.link-a{
+    font-family: 'Bebas Neue', sans-serif;
+    color: #073142;
+    font-size: 18px;
 }
 .campaign-flex{
     display: flex;
     margin-top: 20px;
-    
 }
 .campaign-status{
     font-family: 'Bebas Neue', sans-serif;
-    margin: 10px 100px 20px 0px;
+    margin: 10px 100px 30px 0px;
 }
 .campaign-number{
     border: 1px solid #D88A77;
-    border-radius: 10px;
-    margin-top: 15px;
+    border-radius: 100px;
+    margin-top: 10px;
+    padding: 7px 14px;
+    background-color: #D88A77;
+    color: #FCFAEF;
+    font-size: 15px;
 }
 .button-flex{
     display: flex;
     flex-direction: column;
 }
 button{
-    width: 238px;
-    height: 56px;
+    width: 200px;
+    height: 50px;
+    border: #073142;
     border-radius: 20px;
     background-color: #3E8A9B;
     color: #FCFAEF;
-    font-size: 20px;
+    font-size: 16px;
     margin-bottom: 15px;
 }
-.element-h2{
+.element-h3{
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 50px;
 }
 .group-campaign{
     display: flex;
