--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -4,12 +4,18 @@ body{
 }
 
 .first-display{
-    display: flex;
-    justify-content: space-around;
-    margin: auto;
+    display: flex;;
+    margin: 60px auto 30px;
     background-color: #FFFFFF;
     width: 70vw;
     border-radius: 30px;
+    height: 80vh;
+}
+.sect-one{
+    border-right: 1.5px solid #073142;
+    margin: 40px;
+    padding: 25px 25px;
+    width: 17vw;
 }
 .image-perfil{
     width: 141px;
@@ -24,6 +30,7 @@ body{
     justify-content: center;
     font-size: 35px;
     color: #073142;
+    margin-top: 30px;
 }
 .different-font{
     font-family: 'Bebas Neue', sans-serif;
@@ -33,6 +40,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top: 7px;
 }
 .link-a{
     font-family: 'Bebas Neue', sans-serif;
@@ -41,7 +49,7 @@ body{
 }
 .campaign-flex{
     display: flex;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 .campaign-status{
     font-family: 'Bebas Neue', sans-serif;
@@ -59,23 +67,49 @@ body{
 .button-flex{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
 }
 button{
-    width: 200px;
-    height: 50px;
+    width: 190px;
+    height: 45px;
     border: #073142;
-    border-radius: 20px;
+    border-radius: 18px;
     background-color: #3E8A9B;
     color: #FCFAEF;
     font-size: 16px;
     margin-bottom: 15px;
 }
+.sect-two{
+    margin: 40px;
+    padding: 25px 25px;
+}
 .element-h3{
     font-family: 'Bebas Neue', sans-serif;
+    font-size: 25px;
+    margin-top: 20px;
 }
 .group-campaign{
     display: flex;
+    justify-content: space-around;
     margin-bottom: 15px;
-    border: 5px solid #FCFAEF;
+    height: 110px;
+    width: 33vw;
+    /* padding: 40px 160px 40px 100px ; */
+    border: 2px solid #FCFAEF;
     border-radius: 20px;
+    background-color: #FCFAEF;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    align-items: center;
+}
+.ajust-image{
+    border-radius: 10px;
+    border: 1px solid #D88A77;
+    height: 80px;
+    width: 150px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 13px;
 }
