--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,3 +82,11 @@ footer {
   justify-content: space-evenly;
   backdrop-filter: blur(10px);
 }
+
+.input-stardard {
+  width: 457px;
+  height: 34px;
+  flex-shrink: 0;
+  border: 2px solid var(--BaseGray, #D9D9D9);
+  background: var(--BaseWhite, #FCFAEF);
+}
