--- a/src/styles/pay-form.css
+++ b/src/styles/pay-form.css
@@ -12,12 +12,19 @@ main {
     background: #FCFAEF;
 }
 
-.img {
-    width: 50vw;
-    height: 100%;
+.payment-img {
+    width: 50%;
     background-image: url(../assets/images/payForm.jpg);
     background-position: center;
     background-size: cover;
+}
+
+.first-box {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .first-box .second-box .card {
@@ -27,10 +34,14 @@ main {
     align-items: center;  
 } 
 
+.second-box .card {
+    width: 460px;
+}
+
 .form-title {
     display: flex;
-    width: 557px;
-    height: 185.941px;
+    width: 100%;
+    height: 186px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -59,6 +70,7 @@ main {
 
 .first-form {
     box-shadow: 0px 2px #073142;
+    width: 460px;
 }
 
 .first-form label,
@@ -111,6 +123,10 @@ legend {
     justify-content: center;
     align-items: flex-start;
     flex-shrink: 0;
+}
+
+.data {
+    width: 460px;
 }
 
 .card-input-more,
