--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -121,6 +121,7 @@ button{
     font-size: 25px;
     margin-top: 20px;
     margin-bottom: 20px;
+    color: #073142;
 }
 
 #element-aprov{
@@ -134,7 +135,7 @@ button{
     height: 110px;
     width: 33vw;
     border: 2px solid #FCFAEF;
-    border-radius: 20px;
+    border-radius: 15px;
     background-color: #FCFAEF;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     align-items: center;
@@ -231,34 +232,69 @@ button{
         font-size: 13px;
     }
 
+    .container-mobile{
+        display: flex;
+        justify-content: space-around;
+        margin: 25px 5px 10px 0px;
+    }
+
     .campaign-flex{
-        margin-top: 0px;
-        padding: 15px;
+        padding: 0px;
+        margin: 18px 0px 8px 0px;
+        font-size: 15px;
     }
     
     .item-campanha {
-        margin-top: 5px;
+        margin-top: 0px;
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
     }
 
     .campaign-number{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid #D88A77;
-        background-color: #D88A77;
-        border-radius: 50px;
-        padding: 10px;
-        color: #FCFAEF;
         font-size: 16px;
-        width: 8px;
-        height: 8px;
+        width: 7px;
+        height: 7px;
     }
-    
+
+    .button-flex{
+        margin-top: 30px;
+    }
+
+    button{
+    width: 160px;
+    font-size: 13px;
+    height: 40px;
+}
 
     .sect-two{
         margin: 0px;
-        padding: 2px 25px;
+        padding: 0px 25px 0px 35px;
+    }
+
+    .element-p{
+        font-size: 20px;
+    }
+
+    .group-campaign{
+        height: 70px;
+        width: 82vw;
+    }
+
+    .ajust-bloco{
+        width: 100px;
+        height: 50px;
+    }
+
+    .ajust-image{
+        width: 20px;
+        margin-bottom: 5px;
+    }
+
+    .size-p{
+        font-size: 10px;
+    }
+
+    .inform{
+        font-size: 12px;
     }
 }
