--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -111,6 +111,10 @@ button{
     margin-bottom: 15px;
 }
 
+button:hover {
+    background-color: #126d91;
+}
+
 .sect-two{
     margin: 40px;
     padding: 2px 25px;
