Espacamento e Centralizacao da pagina de solicitacao / ajustar botoes pagina campanha / ajustar idioma pagina farmacia

--- a/src/styles/campaign.css
+++ b/src/styles/campaign.css
@@ -132,7 +132,7 @@ h2 {
     color: #FFFFFF;
     height: 25px;
     border: none;
-    margin-bottom: 2px;
+    margin-bottom: 2rem;
 }
 
 .donate-button:hover {
