--- a/src/styles/campaign-request.css
+++ b/src/styles/campaign-request.css
@@ -103,14 +103,16 @@ textarea, .inputContainer{
    width: 50%;
    align-items: center;
 }
-.form-closure label{
+.select-pharma option,
+.form-closure label {
     color: var(--DarkBlue, #073142);
-font-family: Bellota Text;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 177.778% */
-width: 383px;}
+    font-family: Bellota Text;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; /* 177.778% */
+    width: 383px;
+}
 
 .radio{
     width: 20px;
@@ -128,18 +130,38 @@ margin: 0.6rem;
     background-size: 93px;
     background-repeat: no-repeat;
 }
-.button button{
-    width: 200px;
+
+button{
+    width: 116px;
     height: 39px;
-    flex-shrink: 0;
     border-radius: 15px;
-    text-align: center;
-    font-family: Bellota Text;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
-    background: var(--PaleRed, #D88A77);
-    color: var(--BaseWhite, #FCFAEF);
-    margin: 2rem;
+}
+
+.button-flex{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2rem;
+}
+
+.butype-1{
+    border: 1px solid #073142;
+    color: #073142;
+    background-color: #FCFAEF;
+    font-weight: bold;
+    margin: 0 3rem;
+}
+.butype-2{
+    color: #FCFAEF;
+    background-color: #D88A77;
+    border: none;
+    margin: 0 3rem;
+}
+.select{
+    height: 36px;
+    background-color:  #FCFAEF;
+    border: 2px solid #D9D9D9;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 102%;
 }
