--- a/src/styles/pharma.css
+++ b/src/styles/pharma.css
@@ -1,17 +1,32 @@
-body{
-    margin: 0;
-    padding: 0;
-    background-image: url('../assets/images/young-pharmacist.png');
-    background-size:cover;
-    background-position: center;
-    color: #073142;
-  }
+main {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+.subscription-pharma-page{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: #FCFAEF;
+}
 
-  .box {
-    height: 100%;
-  }
+.pharma-img{
+  width: 50%;
+  background-image: url(../assets/images/pharmacist.png);
+  background-position: center;
+  background-size: cover;
+}
+.first-box {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  label {
+label {
     color: var(--DarkBlue, #073142);
     font-family: Bellota Text;
     font-size: 14px;
@@ -21,7 +36,7 @@ body{
     /* 228.571% */
 }
   
-  form fieldset{
+form fieldset{
     display: flex;
     flex-direction: column;
     background-color: rgba(252, 250, 239, 0.4);
@@ -31,40 +46,44 @@ body{
     border: none;
     padding: 20px;
     width: 50%;
-  }
+}
 
-  .form-sections {
+.form-sections {
     display: flex;
     flex-direction: column;
-  }
+}
 
-  .section-buttons {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 10px;
-  }
+button{
+  width: 116px;
+  height: 39px;
+  border-radius: 15px;
+  font-size: 16px;
+}
 
-  button {
-    width: 200px;
-    height: 39px;
-    flex-shrink: 0;
-    border-radius: 15px;
-    text-align: center;
-    font-family: Bellota Text;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
-    border: none;
-    background: var(--PaleRed, #D88A77);
-    color: var(--BaseWhite, #FCFAEF);
-  }
+.button-flex{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2rem;
+}
 
-  button:hover {
-    color: #D88A77;
-    background-color: #FCFAEF;
-  }
+.butype-1{
+  border: 1px solid #073142;
+  color: #073142;
+  background-color: #FCFAEF;
+  font-weight: bold;
+  margin: 0 3rem;
+}
+
+.butype-2{
+  color: #FCFAEF;
+  background-color: #D88A77;
+  border: none;
+  margin: 0 3rem;
+}
+
+button:hover {
+  color: #D88A77;
+  background-color: #FCFAEF;
+}
 
   
