--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,64 +1,102 @@
 /* styles.css */
 
 /* Estilização do formulário de login */
+body {
+  margin: 0;
+  padding: 0;
+  background: #FCFAEF;
+}
+
 .login-container {
-    width: 300px;
-    margin: auto;
-    margin-top: 300px; /* Espaço superior para centralizar verticalmente */
-    margin-bottom: 300px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 26px;
-    background-color: #f9f9f9;
-  }
-  
-  .login-container h2 {
-    text-align: center;
-    font-family: 'Bellota Text', sans-serif;
-    color: #333;
-  }
-  
-  .login-container form {
-    margin-top: 20px;
-  }
-  
-  .login-container label {
-    display: block;
-    margin-bottom: 5px;
-    font-family: 'Bellota Text', sans-serif;
-    color: #333;
-  }
-  
-  .login-container input[type="text"],
-  .login-container input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  .login-container button[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .login-container button[type="submit"]:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Estilização do rodapé */
-  footer {
-    text-align: center;
-    margin-top: 50px;
-  }
-  
-  #footer-logo {
-    width: 150px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.form-login {
+  display: flex;
+  flex-direction: column;
+  background-color: #FCFAEF;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2rem;
+  padding: 2rem;
+  box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
+  gap: 5px
+}
+
+.login-icon {
+  width: 5rem;
+  height: 5rem;
+  background-image: url(../assets/images/login.png);
+  background-position: center;
+  background-size: cover;
+}
+
+.login-container h2 {
+  padding: 0;
+  margin: 0;
+  font-size: 2.3rem;
+  color: #073142;
+  text-align: center;
+  font-feature-settings: 'subs'on;
+  font-family: Bellota Text;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+.login-container form {
+  margin-top: 20px;
+}
+
+.login-container label {
+  color: var(--DarkBlue, #073142);
+  font-family: Bellota Text;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
+
+}
+
+p {
+  color: #3E8A9B;
+  font-family: Bellota Text;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  width: 20rem;
+  line-height: 1.5rem;
+  /* 228.571% */
+  text-align: justify;
+}
+
+.login-container input[type="text"],
+.login-container input[type="password"] {
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 10px;
+  border-radius: 0.25rem;
+  border: 2px solid var(--BaseGray, #D9D9D9);
+  background: var(--BaseWhite, #FCFAEF);
+}
+
+.login-container button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  color: #FCFAEF;
+  background-color: #D88A77;
+  border: none;
+  width: 116px;
+  height: 39px;
+  border-radius: 0.5rem;
+  font-size: 16px;
+}
