iniciando a validação do formulário da página de solicitação de campanha

--- a/src/styles/pay-form.css
+++ b/src/styles/pay-form.css
@@ -173,3 +173,20 @@ button{
 .butype-2:hover{
     background-color: #df7357;
 }
+
+/* Estilizações dinâmicas */
+input.error {
+    border: solid 2px #992020;
+    background-color: #CCBBBB;
+    color: #662020;
+  }
+  
+  .helper-text {
+    display: none;
+    font-size: .8rem;
+    color: darkred;
+  }
+  
+  .visible {
+    display: block;
+  }
