--- a/src/styles/campaign.css
+++ b/src/styles/campaign.css
@@ -139,3 +139,56 @@ h2 {
     background-color: #3E8A9B;
     color:#073142;
 }
+
+/* Celulares */
+
+@media(max-width: 450px){
+    #title{
+        height: 30dvh;
+        background-position: inherit;
+    }
+
+    #card-section{
+        width: 85%;
+        margin: auto;
+    }
+
+    .inner-container{
+        width: 70%;
+        height: 70%;
+    }
+
+    h1{
+        font-size: 2.5rem;
+        text-align: center;
+    }
+
+    #campaigns-subtitle{
+        height: 10dvh;
+    }
+
+    h2{
+        font-size: 1.5rem;
+    }
+
+    .card-container{
+        width: 100%;
+        height: 9.5rem;
+    }
+
+    .card-content > p {
+        font-size: 0.6rem;
+        padding: 0.5rem;
+        text-align: center;
+    }
+
+    .medicine-card > img {
+        max-height: 30%;
+        margin-top: 10px;
+    }
+
+    .medicine-card > p {
+        font-size: 0.7rem;
+        text-align: center;
+    }
+}
