finalizando landpage index versão mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -63,7 +63,7 @@ footer {
   align-items: center;
   justify-content: center;
   height: 60px;
-  width: 100wh;
+  width: 100vw;
   background-color: #073742;
 }
 
