--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,7 +38,7 @@ h2 {
 
 span i {
     color: #D9D9D9;
-    font-size: 60px;
+    font-size: 50px;
  }
 
  #third-section {
@@ -84,4 +84,35 @@ span i {
 
  .button-container:hover {
     background-color: #073142;
+ }
+
+ /* Celulares */
+
+ @media(max-width: 450px){
+   #first-section{
+      height: 30vh;
+   }
+
+   h1{
+      font-size: 2rem;
+   }
+
+   p{
+      width: 60%;
+   }
+
+   h2{
+      font-size: 1.2rem;
+   }
+
+   .button-container{
+      width: 200px;
+      height: 130px;
+      flex-direction: row;
+   }
+
+   #button-section{
+      height: 500px;
+      flex-direction: column;
+   }
  }
